# code2md

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml  setup.py
code2md/: clipboard_helper.py  consts.py  file_collector.py  file_writer.py  interfaces.py  main.py
